sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: value and is not a member of Boolean
    while(j>0 and j-1<j){
              ^